--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,7 +9,6 @@ $DraggableCharInfoFontCOlor: #f9ae01;
   padding: 0;
   margin: 0;
   box-sizing: 0;
-  color: white;
 }
 
 a {
@@ -44,6 +43,8 @@ a {
 
 .modal-content {
   background-color: #182129;
+  color: white;
+
   .icon {
     cursor: pointer;
   }
@@ -75,17 +76,36 @@ Body {
         .DraggableImage {
           position: absolute;
 
-          img {
-            width: 90px;
-            border-radius: 5px;
+          .img_container {
+            position: relative;
+
+            .icons {
+              position: absolute;
+              width: 100%;
+              display: none;
+              justify-content: end;
+              color: $buttonColor;
+            }
+
+            .removeImgBtn {
+              cursor: pointer;
+            }
+
+            &:hover .icons {
+              display: flex;
+            }
+
+            img {
+              width: 90px;
+              border-radius: 5px;
+            }
           }
 
-          .draggableCharInfo{
+          .draggableCharInfo {
             text-align: center;
             color: $DraggableCharInfoFontCOlor;
             line-height: 1rem;
           }
-
         }
       }
 
@@ -119,7 +139,6 @@ Body {
             transition: opacity 0.3s ease;
             border-radius: 5px;
             background-color: $buttonColor;
-            font-size: 22px;
           }
 
           img {
