--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -127,7 +127,7 @@ Body {
           }
         }
 
-        .MenuListItem {
+        .CharacterListItem, .TableListItem {
           position: relative;
 
           .addButton {
