--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -48,18 +48,49 @@ div {
 body {
   background-color: $backGroundColor;
   width: 100dvw;
-  overflow: hidden;
+  // overflow: hidden;
 
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 
   #root {
     .App {
+      // * peanutGallery
+      .PeanutGallery {
+        margin-bottom: 12px;
+        .peanutGalleryWrapper {
+          height: 90px;
+          width: min-content;
+          margin: 12px 0 0 12px;
+          display: flex;
+          gap: 5px;
+          border: 3px solid transparent;
+          border-radius: 12px;
+          transition: 0.5s;
+          
+          &:hover {
+            border: 3px solid $borderColor;
+            border-radius: 12px;
+          }
+        }
+
+        img {
+          cursor: pointer;
+          &:hover{
+            scale: 1.05;
+          }
+        }
+      }
+
       // * playGround
       .PlayGround {
         position: relative;
         overflow: hidden;
-
+        border: 3px solid $borderColor;
+        border-radius: 12px;
+        min-height: 85vh;
+        margin-left: 12px;
+        
         // not selectable mode start
         user-select: none;
         -moz-user-select: none;
@@ -87,7 +118,6 @@ body {
     // * SideBar Menu
     menu {
       height: 100dvh;
-      // border-left: 3px solid $borderColor;
       display: flex;
       justify-content: center;
       align-items: center;
