--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -67,7 +67,7 @@ body {
           border: 3px solid transparent;
           border-radius: 12px;
           transition: 0.5s;
-          
+
           &:hover {
             border: 3px solid $borderColor;
             border-radius: 12px;
@@ -76,7 +76,7 @@ body {
 
         img {
           cursor: pointer;
-          &:hover{
+          &:hover {
             scale: 1.05;
           }
         }
@@ -90,7 +90,7 @@ body {
         border-radius: 12px;
         min-height: 85vh;
         margin-left: 12px;
-        
+
         // not selectable mode start
         user-select: none;
         -moz-user-select: none;
@@ -112,71 +112,83 @@ body {
           color: $DraggableCharInfoFontCOlor;
           line-height: 1rem;
         }
+
+        .ArchetypeDescription {
+          width: 80%;
+          height: 120px;
+          padding: 7px;
+          border: 3px solid $borderColor;
+          border-radius: 12px;
+          position: absolute;
+          bottom: 5%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
-    }
 
-    // * SideBar Menu
-    menu {
-      height: 100dvh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      // * SideBar Menu
+      menu {
+        height: 100dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
 
-      .MenuList {
-        overflow-x: hidden;
-        overflow-y: scroll;
-        border: 3px solid $borderColor;
-        border-radius: 25px;
-        height: 75%;
-        padding: 12px 0;
+        .MenuList {
+          overflow-x: hidden;
+          overflow-y: scroll;
+          border: 3px solid $borderColor;
+          border-radius: 25px;
+          height: 75%;
+          padding: 12px 0;
 
-        .CharacterListItem {
-          .imgArea {
-            position: relative;
+          .CharacterListItem {
+            .imgArea {
+              position: relative;
 
-            .addButton {
-              opacity: 0;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              transition: opacity 0.3s ease;
-              border-radius: 5px;
-              background-color: $buttonColor;
+              .addButton {
+                opacity: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                transition: opacity 0.3s ease;
+                border-radius: 5px;
+                background-color: $buttonColor;
+              }
+
+              img {
+                // width: 90px;
+                border-radius: 5px;
+              }
+
+              &:hover .addButton {
+                opacity: 0.85;
+                cursor: pointer;
+              }
             }
 
-            img {
-              // width: 90px;
-              border-radius: 5px;
+            p {
+              // font-weight: 100;
+              color: #a4a4a4;
             }
-
-            &:hover .addButton {
-              opacity: 0.85;
-              cursor: pointer;
-            }
-          }
-
-          p {
-            // font-weight: 100;
-            color: #a4a4a4;
           }
         }
       }
-    }
 
-    // * Admin design Start
-    .Admin {
-      .FormArea {
-        width: 400px;
-        border: 1px solid $borderColor;
-        border-radius: 12px;
-        color: white;
-
-        .form-select,
-        .form-control {
-          background-color: $buttonColor;
+      // * Admin design Start
+      .Admin {
+        .FormArea {
+          width: 400px;
+          border: 1px solid $borderColor;
+          border-radius: 12px;
           color: white;
+
+          .form-select,
+          .form-control {
+            background-color: $buttonColor;
+            color: white;
+          }
         }
       }
     }
