--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -180,6 +180,7 @@ body {
           width: 80%;
           height: 120px;
           padding: 7px;
+          overflow-y: scroll;
           border: 3px solid $borderColor;
           border-radius: 12px;
           position: absolute;
