--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -152,7 +152,7 @@ body {
             left: 75px;
             padding: 9px;
             border-radius: 6px;
-            margin-left: 6px;
+            margin-left: 16px;
             background-color: white;
             display: flex;
             flex-direction: column;
@@ -180,7 +180,7 @@ body {
           width: 80%;
           height: 120px;
           padding: 7px;
-          overflow-y: scroll;
+          overflow-y: hidden;
           border: 3px solid $borderColor;
           border-radius: 12px;
           position: absolute;
