Session Page has been created

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -277,5 +277,13 @@ body {
         }
       }
     }
+
+    // .swiper_container {
+    //     img {
+    //       // width: 185px;
+    //       // object-fit: cover;
+    //       // scale:1.2 ;
+    //   }
+    // }
   }
 }
