table size has been changed

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -146,9 +146,10 @@ body {
         // not selectable mode end
 
         // Table Image Design
-        .TablePlace {
+        .TablePlace { 
           img {
-            width: 500px;
+            // width: 500px;
+            width: 30vw;
             border-radius: 12px;
           }
         }
