--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -124,7 +124,9 @@ body {
             }
 
             p {
-              color: $textColor;
+              // color: $textColor;
+              color: 'white';
+              font-weight: bold;
             }
 
             img {
@@ -164,28 +166,6 @@ body {
             img {
               width: 75px;
               border-radius: 5px;
-            }
-
-            .ContextMenu {
-              position: absolute;
-              left: 75px;
-              padding: 9px;
-              border-radius: 6px;
-              margin-left: 16px;
-              background-color: white;
-              display: flex;
-              flex-direction: column;
-              gap: 6px;
-              text-align: center;
-              cursor: pointer;
-              span {
-                color: $buttonHover;
-                font-weight: 600;
-
-                &:hover {
-                  color: $backGroundColor;
-                }
-              }
             }
           }
 
@@ -235,31 +215,12 @@ body {
 
             .CharacterListItem {
               .imgArea {
-                position: relative;
-
                 * {
                   color: inherit;
                 }
 
-                .addButton {
-                  opacity: 0;
-                  position: absolute;
-                  top: 50%;
-                  left: 50%;
-                  transform: translate(-50%, -50%);
-                  transition: opacity 0.3s ease;
-                  border-radius: 5px;
-                  background-color: $buttonColor;
-                }
-
                 img {
-                  // width: 90px;
                   border-radius: 5px;
-                }
-
-                &:hover .addButton {
-                  opacity: 0.85;
-                  cursor: pointer;
                 }
               }
 
