--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -180,20 +180,21 @@ body {
           }
 
           .RemovableModal {
-            z-index: 120;
+            z-index: 12;
           }
 
           .ArchetypeDescription {
             width: 80%;
-            height: 120px;
+            height: 150px;
             padding: 7px;
             overflow-y: hidden;
-            // border: 3px solid $borderColor;
+            font-size: 1.5rem;
             border-radius: 12px;
             position: absolute;
             bottom: -5%;
             left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 10;
           }
         }
 
