End game logo has been added

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -179,6 +179,10 @@ body {
             line-height: 1rem;
           }
 
+          .EndButtonLogo {
+            cursor: pointer;
+          }
+
           .RemovableModal {
             z-index: 12;
           }
