[new feature]: client can rename Play ground characters and this renamed character also show in the Final PDF result.
[bug fix]: Only PlayGroundCharacter has been removed when it over in the banish icon

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -183,6 +183,11 @@ body {
             text-align: center;
             color: $DraggableCharInfoFontCOlor;
             line-height: 1rem;
+
+            .titleEditInput {
+              width: 90px !important;
+              display: block;
+            }
           }
 
           .RemovableModal {
