fix some bugs of compose.dev.yml and Session name has been added on the top of the play ground

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -165,9 +165,10 @@ body {
             }
           }
 
-          // Removable Area
-          // .RemovableArea {
-
+          // Session Name Heading
+          // .SessionNameHeading {
+          //   position: absolute;
+          // z-index: -1;
           // }
 
           // Draggable Image design
